# tadpole

./: .gitignore  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix  sample-config.json  shell.nix
nix/: sources.json
src/: config.rs  main.rs  metrics.rs  types.rs
src/blobstore/: filesystem.rs  mod.rs  s3.rs
src/metadatastore/: etcd.rs  filesystem.rs  mod.rs
