[package]
name = "tadpole"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = "2"
lazy_static = "1"
futures = "0.3"
hex = "0.4"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = [ "gzip", "rustls-tls-manual-roots" ] }
signal-hook = "0.3"
serde = { version = "1", features = [ "rc" ] }
serde_derive = { version = "1" }
serde_json = { version = "1" }
sha2 = "0.9"
strum = { version = "0.21", features = ["derive"] }
prometheus = "0.12"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["compression"] }
uuid = { version = "0.8", features = ["v4"] }

dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
pretty_env_logger = "0.4"