[package]
name = "tadpole"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = "2"
etcd-rs = "0.5"
lazy_static = "1"
futures = "0.3"
hex = "0.4"
hyper = "0.14"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = [ "gzip", "rustls-tls-manual-roots" ] }
rust-s3 = { git = "https://github.com/johanot/rust-s3", branch = "copy-object-and-multipart-upload" }
signal-hook = "0.3"
serde = { version = "1", features = [ "rc" ] }
serde_derive = { version = "1" }
serde_json = { version = "1" }
sha2 = "0.9"
strum = { version = "0.21", features = ["derive"] }
prometheus = "0.12"
ttl_cache = "0.5"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.4", features = ["transport", "tls"] }
warp = { version = "0.3", features = ["compression"] }
uuid = { version = "0.8", features = ["v4"] }

dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
pretty_env_logger = "0.4"