[package]
name = "tadpole"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
bytes = "1"
chrono = "0"
clap = "2"
etcd-rs = "0"
lazy_static = "1"
futures = "0"
hex = "0"
hyper = "0"
once_cell = "1"
regex = "1"
reqwest = { version = "0", features = [ "gzip", "rustls-tls-manual-roots" ] }
rust-s3 = { git = "https://github.com/johanot/rust-s3", branch = "copy-object-and-multipart-upload" }
signal-hook = "0"
serde = { version = "1", features = [ "rc" ] }
serde_derive = { version = "1" }
serde_json = { version = "1" }
sha2 = "0"
strum = { version = "0", features = ["derive"] }
prometheus = "0"
ttl_cache = "0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0", features = ["transport", "tls"] }
warp = { version = "0", features = ["compression"] }
uuid = { version = "0", features = ["v4"] }

dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
pretty_env_logger = "0"
